# MPL2.0 HEADER START
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# MPL2.0 HEADER END
#
# Copyright 2010-2012 Michael Himbeault and Travis Friesen
#

set(LIBS ${LIBS} odb pthread)

include_directories("../src/include" "../extralib/include")

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 

add_executable(minimal-erbt minimal-erbt.cpp)
add_executable(minimal-odb minimal-odb.cpp)

add_executable(comp-index_datastore comp-index_datastore.cpp)
add_executable(comp-scheduler comp-scheduler.cpp)

add_executable(unit-collator unit-collator.cpp)
add_executable(unit-protoparse unit-protoparse.cpp)

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 

target_link_libraries(minimal-erbt ${LIBS})
target_link_libraries(minimal-odb ${LIBS})

target_link_libraries(comp-index_datastore ${LIBS})
target_link_libraries(comp-scheduler ${LIBS} rt)

target_link_libraries(unit-collator ${LIBS})
target_link_libraries(unit-protoparse ${LIBS})

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 

add_dependencies(checks minimal-erbt)
add_dependencies(checks minimal-odb)

add_dependencies(checks comp-index_datastore)
add_dependencies(checks comp-scheduler)

add_dependencies(checks unit-collator)
add_dependencies(checks unit-protoparse)

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 

add_test(minimal-erbt test-output "392b78f9c2f4e0d6677bcf8575b3d24f89c39aea9ff30994526d36dd33eb2048" "" "./minimal-erbt")
add_test(minimal-odb  test-output "88da74e6623391aea0a8c8cfecbdffbbcd5abf94df9028237f35247cf5ede862" "" "./minimal-odb")

add_test(comp-scheduler.unsched_single comp-scheduler 0)
add_test(comp-scheduler.sched_sync comp-scheduler 1)
add_test(comp-scheduler.sched_defer comp-scheduler 2)
add_test(comp-scheduler.unsched_single_odb comp-scheduler 3)
add_test(comp-scheduler.sched_sync_odb comp-scheduler 4)

add_test(comp-rbt.bank.none  test-output "" "43031308a1919ec69606810188462336ceab795a057a987a2ea3112898ff5c2c" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 0 -T 0")
add_test(comp-rbt.bank.drop  test-output "" "bbfd379491b29ba724f4a2163972bf827c83ff7bc14a5a49058fc39d23d658e0" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 1 -T 0")
add_test(comp-rbt.ll.none    test-output "" "43031308a1919ec69606810188462336ceab795a057a987a2ea3112898ff5c2c" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 0 -T 1")
add_test(comp-rbt.ll.drop    test-output "" "bbfd379491b29ba724f4a2163972bf827c83ff7bc14a5a49058fc39d23d658e0" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 1 -T 1")
add_test(comp-rbt.banki.none test-output "" "43031308a1919ec69606810188462336ceab795a057a987a2ea3112898ff5c2c" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 0 -T 2")
add_test(comp-rbt.banki.drop test-output "" "bbfd379491b29ba724f4a2163972bf827c83ff7bc14a5a49058fc39d23d658e0" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 1 -T 2")
add_test(comp-rbt.lli.none   test-output "" "43031308a1919ec69606810188462336ceab795a057a987a2ea3112898ff5c2c" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 0 -T 3")
add_test(comp-rbt.lli.drop   test-output "" "bbfd379491b29ba724f4a2163972bf827c83ff7bc14a5a49058fc39d23d658e0" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 1 -T 3")
add_test(comp-rbt.llv.none   test-output "" "5f95f2dd442d9ed865ff201f7e07b5a224cab688cdd506dc617f06616f8b9369" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 0 -T 4")
add_test(comp-rbt.llv.drop   test-output "" "6d81f80fa65fe4873024a1df6a066c1d633421b06a38c2b29c299800a3967fb7" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 1 -T 4")

add_test(comp-ll.bank.none  test-output "" "43031308a1919ec69606810188462336ceab795a057a987a2ea3112898ff5c2c" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 2 -T 0")
add_test(comp-ll.bank.drop  test-output "" "bbfd379491b29ba724f4a2163972bf827c83ff7bc14a5a49058fc39d23d658e0" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 3 -T 0")
add_test(comp-ll.ll.none    test-output "" "43031308a1919ec69606810188462336ceab795a057a987a2ea3112898ff5c2c" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 2 -T 1")
add_test(comp-ll.ll.drop    test-output "" "bbfd379491b29ba724f4a2163972bf827c83ff7bc14a5a49058fc39d23d658e0" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 3 -T 1")
add_test(comp-ll.banki.none test-output "" "43031308a1919ec69606810188462336ceab795a057a987a2ea3112898ff5c2c" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 2 -T 2")
add_test(comp-ll.banki.drop test-output "" "bbfd379491b29ba724f4a2163972bf827c83ff7bc14a5a49058fc39d23d658e0" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 3 -T 2")
add_test(comp-ll.lli.none   test-output "" "43031308a1919ec69606810188462336ceab795a057a987a2ea3112898ff5c2c" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 2 -T 3")
add_test(comp-ll.lli.drop   test-output "" "bbfd379491b29ba724f4a2163972bf827c83ff7bc14a5a49058fc39d23d658e0" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 3 -T 3")
add_test(comp-ll.llv.none   test-output "" "5f95f2dd442d9ed865ff201f7e07b5a224cab688cdd506dc617f06616f8b9369" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 2 -T 4")
add_test(comp-ll.llv.drop   test-output "" "6d81f80fa65fe4873024a1df6a066c1d633421b06a38c2b29c299800a3967fb7" "./comp-index_datastore" "-e 8 -n 100000 -t 10 -i 3 -T 4")

add_test(unit-collator.0  test-output "" "" "./unit-collator" "0")
add_test(unit-collator.1  test-output "" "" "./unit-collator" "1")
add_test(unit-collator.2  test-output "d7d551d92d81264dbb9a11ca61f31c7172ad82a2536d0ca1cc5367e77122934b" "" "./unit-collator" "2")
add_test(unit-collator.3  test-output "d7d551d92d81264dbb9a11ca61f31c7172ad82a2536d0ca1cc5367e77122934b" "" "./unit-collator" "3")
add_test(unit-collator.4  test-output "d7d551d92d81264dbb9a11ca61f31c7172ad82a2536d0ca1cc5367e77122934b" "" "./unit-collator" "4")
add_test(unit-collator.5  test-output "d7d551d92d81264dbb9a11ca61f31c7172ad82a2536d0ca1cc5367e77122934b" "" "./unit-collator" "5")
add_test(unit-collator.6  test-output "d7d551d92d81264dbb9a11ca61f31c7172ad82a2536d0ca1cc5367e77122934b" "" "./unit-collator" "6")
add_test(unit-collator.7  test-output "d7d551d92d81264dbb9a11ca61f31c7172ad82a2536d0ca1cc5367e77122934b" "" "./unit-collator" "7")
add_test(unit-collator.8  test-output "d7d551d92d81264dbb9a11ca61f31c7172ad82a2536d0ca1cc5367e77122934b" "" "./unit-collator" "8")
add_test(unit-collator.9  test-output "d7d551d92d81264dbb9a11ca61f31c7172ad82a2536d0ca1cc5367e77122934b" "" "./unit-collator" "9")
add_test(unit-collator.10 test-output "" "" "./unit-collator" "10")
add_test(unit-collator.11 test-output "" "" "./unit-collator" "11")
add_test(unit-collator.12 test-output "" "" "./unit-collator" "12")
add_test(unit-collator.13 test-output "" "" "./unit-collator" "13")
add_test(unit-collator.14 test-output "" "" "./unit-collator" "14")
add_test(unit-collator.15 test-output "" "" "./unit-collator" "15")
add_test(unit-collator.16 test-output "" "" "./unit-collator" "16")
add_test(unit-collator.17 test-output "" "" "./unit-collator" "17")
add_test(unit-collator.18 test-output "" "" "./unit-collator" "18")
add_test(unit-collator.19 test-output "" "" "./unit-collator" "19")
add_test(unit-collator.20 test-output "" "" "./unit-collator" "20")
add_test(unit-collator.21 test-output "" "" "./unit-collator" "21")
add_test(unit-collator.22 test-output "" "" "./unit-collator" "22")
add_test(unit-collator.23 test-output "" "" "./unit-collator" "23")
add_test(unit-collator.24 test-output "" "" "./unit-collator" "24")
add_test(unit-collator.25 test-output "" "" "./unit-collator" "25")
add_test(unit-collator.26 test-output "" "" "./unit-collator" "26")
add_test(unit-collator.27 test-output "" "" "./unit-collator" "27")
add_test(unit-collator.28 test-output "" "" "./unit-collator" "28")
add_test(unit-collator.29 test-output "" "" "./unit-collator" "29")
add_test(unit-collator.30 test-output "" "" "./unit-collator" "30")
add_test(unit-collator.31 test-output "" "" "./unit-collator" "31")
add_test(unit-collator.32 test-output "" "" "./unit-collator" "32")
add_test(unit-collator.33 test-output "" "" "./unit-collator" "33")
add_test(unit-collator.34 test-output "" "" "./unit-collator" "34")
add_test(unit-collator.35 test-output "" "" "./unit-collator" "35")
add_test(unit-collator.36 test-output "" "" "./unit-collator" "36")
add_test(unit-collator.37 test-output "" "" "./unit-collator" "37")
add_test(unit-collator.38 test-output "" "" "./unit-collator" "38")
add_test(unit-collator.39 test-output "" "" "./unit-collator" "39")
add_test(unit-collator.40 test-output "" "" "./unit-collator" "40")
add_test(unit-collator.41 test-output "" "" "./unit-collator" "41")
add_test(unit-collator.42 test-output "" "" "./unit-collator" "42")
add_test(unit-collator.43 test-output "" "" "./unit-collator" "43")
add_test(unit-collator.44 test-output "" "" "./unit-collator" "44")
add_test(unit-collator.45 test-output "" "" "./unit-collator" "45")
add_test(unit-collator.46 test-output "" "" "./unit-collator" "46")
add_test(unit-collator.47 test-output "" "" "./unit-collator" "47")
add_test(unit-collator.48 test-output "" "" "./unit-collator" "48")
add_test(unit-collator.49 test-output "" "" "./unit-collator" "49")
add_test(unit-collator.50 test-output "" "" "./unit-collator" "50")
add_test(unit-collator.51 test-output "" "" "./unit-collator" "51")
add_test(unit-collator.52 test-output "" "" "./unit-collator" "52")
add_test(unit-collator.53 test-output "" "" "./unit-collator" "53")
add_test(unit-collator.54 test-output "" "" "./unit-collator" "54")
add_test(unit-collator.55 test-output "" "" "./unit-collator" "55")
add_test(unit-collator.56 test-output "" "" "./unit-collator" "56")
add_test(unit-collator.57 test-output "" "" "./unit-collator" "57")
add_test(unit-collator.58 test-output "" "" "./unit-collator" "58")
add_test(unit-collator.59 test-output "" "" "./unit-collator" "59")
add_test(unit-collator.60 test-output "" "" "./unit-collator" "60")
add_test(unit-collator.61 test-output "" "" "./unit-collator" "61")
add_test(unit-collator.62 test-output "" "" "./unit-collator" "62")
add_test(unit-collator.63 test-output "" "" "./unit-collator" "63")
add_test(unit-collator.64 test-output "" "" "./unit-collator" "64")
add_test(unit-collator.65 test-output "" "" "./unit-collator" "65")
add_test(unit-collator.66 test-output "" "" "./unit-collator" "66")
add_test(unit-collator.67 test-output "" "" "./unit-collator" "67")
add_test(unit-collator.68 test-output "" "" "./unit-collator" "68")
add_test(unit-collator.69 test-output "" "" "./unit-collator" "69")
add_test(unit-collator.70 test-output "" "" "./unit-collator" "70")
add_test(unit-collator.71 test-output "" "" "./unit-collator" "71")
add_test(unit-collator.72 test-output "" "" "./unit-collator" "72")
add_test(unit-collator.73 test-output "" "" "./unit-collator" "73")
add_test(unit-collator.74 test-output "" "" "./unit-collator" "74")
add_test(unit-collator.75 test-output "" "" "./unit-collator" "75")
add_test(unit-collator.76 test-output "" "" "./unit-collator" "76")
add_test(unit-collator.77 test-output "" "" "./unit-collator" "77")
add_test(unit-collator.78 test-output "" "" "./unit-collator" "78")
add_test(unit-collator.79 test-output "" "" "./unit-collator" "79")
add_test(unit-collator.80 test-output "" "" "./unit-collator" "80")
add_test(unit-collator.81 test-output "" "" "./unit-collator" "81")
add_test(unit-collator.82 test-output "" "" "./unit-collator" "82")
add_test(unit-collator.83 test-output "" "" "./unit-collator" "83")
add_test(unit-collator.84 test-output "" "" "./unit-collator" "84")
add_test(unit-collator.85 test-output "" "" "./unit-collator" "85")
add_test(unit-collator.86 test-output "" "" "./unit-collator" "86")
add_test(unit-collator.87 test-output "" "" "./unit-collator" "87")
add_test(unit-collator.88 test-output "" "" "./unit-collator" "88")
add_test(unit-collator.89 test-output "" "" "./unit-collator" "89")
add_test(unit-collator.90 test-output "" "" "./unit-collator" "90")
add_test(unit-collator.91 test-output "" "" "./unit-collator" "91")
add_test(unit-collator.92 test-output "" "" "./unit-collator" "92")
add_test(unit-collator.93 test-output "" "" "./unit-collator" "93")
add_test(unit-collator.94 test-output "" "" "./unit-collator" "94")
add_test(unit-collator.95 test-output "" "" "./unit-collator" "95")
add_test(unit-collator.96 test-output "" "" "./unit-collator" "96")
add_test(unit-collator.97 test-output "" "" "./unit-collator" "97")
add_test(unit-collator.98 test-output "" "" "./unit-collator" "98")
add_test(unit-collator.99 test-output "" "" "./unit-collator" "99")
add_test(unit-collator.100 test-output "" "" "./unit-collator" "100")
add_test(unit-collator.101 test-output "" "" "./unit-collator" "101")
add_test(unit-collator.102 test-output "" "" "./unit-collator" "102")
add_test(unit-collator.103 test-output "" "" "./unit-collator" "103")
add_test(unit-collator.104 test-output "" "" "./unit-collator" "104")
add_test(unit-collator.105 test-output "" "" "./unit-collator" "105")
add_test(unit-collator.106 test-output "" "" "./unit-collator" "106")
add_test(unit-collator.107 test-output "" "" "./unit-collator" "107")
add_test(unit-collator.108 test-output "" "" "./unit-collator" "108")
add_test(unit-collator.109 test-output "" "" "./unit-collator" "109")
add_test(unit-collator.110 test-output "" "" "./unit-collator" "110")
add_test(unit-collator.111 test-output "" "" "./unit-collator" "111")
add_test(unit-collator.112 test-output "" "" "./unit-collator" "112")
add_test(unit-collator.113 test-output "" "" "./unit-collator" "113")
add_test(unit-collator.114 test-output "" "" "./unit-collator" "114")
add_test(unit-collator.115 test-output "" "" "./unit-collator" "115")
add_test(unit-collator.116 test-output "" "" "./unit-collator" "116")
add_test(unit-collator.117 test-output "" "" "./unit-collator" "117")
add_test(unit-collator.118 test-output "" "" "./unit-collator" "118")
add_test(unit-collator.119 test-output "" "" "./unit-collator" "119")
add_test(unit-collator.120 test-output "" "" "./unit-collator" "120")
add_test(unit-collator.121 test-output "" "" "./unit-collator" "121")
add_test(unit-collator.122 test-output "" "" "./unit-collator" "122")
add_test(unit-collator.123 test-output "" "" "./unit-collator" "123")
add_test(unit-collator.124 test-output "" "" "./unit-collator" "124")
add_test(unit-collator.125 test-output "" "" "./unit-collator" "125")
add_test(unit-collator.126 test-output "" "" "./unit-collator" "126")
add_test(unit-collator.127 test-output "" "" "./unit-collator" "127")
add_test(unit-collator.128 test-output "" "" "./unit-collator" "128")
add_test(unit-collator.129 test-output "" "" "./unit-collator" "129")
add_test(unit-collator.130 test-output "" "" "./unit-collator" "130")
add_test(unit-collator.131 test-output "" "" "./unit-collator" "131")
add_test(unit-collator.132 test-output "" "" "./unit-collator" "132")
add_test(unit-collator.133 test-output "" "" "./unit-collator" "133")
add_test(unit-collator.134 test-output "" "" "./unit-collator" "134")
add_test(unit-collator.135 test-output "" "" "./unit-collator" "135")
add_test(unit-collator.136 test-output "" "" "./unit-collator" "136")
add_test(unit-collator.137 test-output "" "" "./unit-collator" "137")
add_test(unit-collator.138 test-output "" "" "./unit-collator" "138")
add_test(unit-collator.139 test-output "" "" "./unit-collator" "139")
add_test(unit-collator.140 test-output "" "" "./unit-collator" "140")
add_test(unit-collator.141 test-output "" "" "./unit-collator" "141")
add_test(unit-collator.142 test-output "" "" "./unit-collator" "142")
add_test(unit-collator.143 test-output "" "" "./unit-collator" "143")
add_test(unit-collator.144 test-output "" "" "./unit-collator" "144")
add_test(unit-collator.145 test-output "" "" "./unit-collator" "145")
add_test(unit-collator.146 test-output "" "" "./unit-collator" "146")
add_test(unit-collator.147 test-output "" "" "./unit-collator" "147")
add_test(unit-collator.148 test-output "" "" "./unit-collator" "148")
add_test(unit-collator.149 test-output "" "" "./unit-collator" "149")
add_test(unit-collator.150 test-output "" "" "./unit-collator" "150")
add_test(unit-collator.151 test-output "" "" "./unit-collator" "151")
add_test(unit-collator.152 test-output "" "" "./unit-collator" "152")
add_test(unit-collator.153 test-output "" "" "./unit-collator" "153")
add_test(unit-collator.154 test-output "" "" "./unit-collator" "154")
add_test(unit-collator.155 test-output "" "" "./unit-collator" "155")
add_test(unit-collator.156 test-output "" "" "./unit-collator" "156")
add_test(unit-collator.157 test-output "" "" "./unit-collator" "157")
add_test(unit-collator.158 test-output "" "" "./unit-collator" "158")
add_test(unit-collator.159 test-output "" "" "./unit-collator" "159")
add_test(unit-collator.160 test-output "" "" "./unit-collator" "160")
add_test(unit-collator.161 test-output "" "" "./unit-collator" "161")
add_test(unit-collator.162 test-output "" "" "./unit-collator" "162")
add_test(unit-collator.163 test-output "" "" "./unit-collator" "163")
add_test(unit-collator.164 test-output "" "" "./unit-collator" "164")
add_test(unit-collator.165 test-output "" "" "./unit-collator" "165")
add_test(unit-collator.166 test-output "" "" "./unit-collator" "166")
add_test(unit-collator.167 test-output "" "" "./unit-collator" "167")
add_test(unit-collator.168 test-output "" "" "./unit-collator" "168")
add_test(unit-collator.169 test-output "" "" "./unit-collator" "169")
add_test(unit-collator.170 test-output "" "" "./unit-collator" "170")
add_test(unit-collator.171 test-output "" "" "./unit-collator" "171")
add_test(unit-collator.172 test-output "" "" "./unit-collator" "172")
add_test(unit-collator.173 test-output "" "" "./unit-collator" "173")
add_test(unit-collator.174 test-output "" "" "./unit-collator" "174")
add_test(unit-collator.175 test-output "" "" "./unit-collator" "175")
add_test(unit-collator.176 test-output "" "" "./unit-collator" "176")
add_test(unit-collator.177 test-output "" "" "./unit-collator" "177")
add_test(unit-collator.178 test-output "" "" "./unit-collator" "178")
add_test(unit-collator.179 test-output "" "" "./unit-collator" "179")
add_test(unit-collator.180 test-output "" "" "./unit-collator" "180")
add_test(unit-collator.181 test-output "" "" "./unit-collator" "181")
add_test(unit-collator.182 test-output "" "" "./unit-collator" "182")
add_test(unit-collator.183 test-output "" "" "./unit-collator" "183")
add_test(unit-collator.184 test-output "" "" "./unit-collator" "184")
add_test(unit-collator.185 test-output "" "" "./unit-collator" "185")
add_test(unit-collator.186 test-output "" "" "./unit-collator" "186")
add_test(unit-collator.187 test-output "" "" "./unit-collator" "187")
add_test(unit-collator.188 test-output "" "" "./unit-collator" "188")
add_test(unit-collator.189 test-output "" "" "./unit-collator" "189")
add_test(unit-collator.190 test-output "" "" "./unit-collator" "190")
add_test(unit-collator.191 test-output "" "" "./unit-collator" "191")
add_test(unit-collator.192 test-output "" "" "./unit-collator" "192")
add_test(unit-collator.193 test-output "" "" "./unit-collator" "193")
add_test(unit-collator.194 test-output "" "" "./unit-collator" "194")
add_test(unit-collator.195 test-output "" "" "./unit-collator" "195")
add_test(unit-collator.196 test-output "" "" "./unit-collator" "196")
add_test(unit-collator.197 test-output "" "" "./unit-collator" "197")
add_test(unit-collator.198 test-output "" "" "./unit-collator" "198")
add_test(unit-collator.199 test-output "" "" "./unit-collator" "199")
add_test(unit-collator.200 test-output "" "" "./unit-collator" "200")
add_test(unit-collator.201 test-output "" "" "./unit-collator" "201")
add_test(unit-collator.202 test-output "" "" "./unit-collator" "202")
add_test(unit-collator.203 test-output "" "" "./unit-collator" "203")
add_test(unit-collator.204 test-output "" "" "./unit-collator" "204")
add_test(unit-collator.205 test-output "" "" "./unit-collator" "205")
add_test(unit-collator.206 test-output "" "" "./unit-collator" "206")
add_test(unit-collator.207 test-output "" "" "./unit-collator" "207")
add_test(unit-collator.208 test-output "" "" "./unit-collator" "208")
add_test(unit-collator.209 test-output "" "" "./unit-collator" "209")
add_test(unit-collator.210 test-output "" "" "./unit-collator" "210")
add_test(unit-collator.211 test-output "" "" "./unit-collator" "211")
add_test(unit-collator.212 test-output "" "" "./unit-collator" "212")
add_test(unit-collator.213 test-output "" "" "./unit-collator" "213")
add_test(unit-collator.214 test-output "" "" "./unit-collator" "214")
add_test(unit-collator.215 test-output "" "" "./unit-collator" "215")
add_test(unit-collator.216 test-output "" "" "./unit-collator" "216")
add_test(unit-collator.217 test-output "" "" "./unit-collator" "217")
add_test(unit-collator.218 test-output "" "" "./unit-collator" "218")
add_test(unit-collator.219 test-output "" "" "./unit-collator" "219")
add_test(unit-collator.220 test-output "" "" "./unit-collator" "220")
add_test(unit-collator.221 test-output "" "" "./unit-collator" "221")
add_test(unit-collator.222 test-output "" "" "./unit-collator" "222")
add_test(unit-collator.223 test-output "" "" "./unit-collator" "223")
add_test(unit-collator.224 test-output "" "" "./unit-collator" "224")
add_test(unit-collator.225 test-output "" "" "./unit-collator" "225")
add_test(unit-collator.226 test-output "" "" "./unit-collator" "226")
add_test(unit-collator.227 test-output "" "" "./unit-collator" "227")
add_test(unit-collator.228 test-output "" "" "./unit-collator" "228")
add_test(unit-collator.229 test-output "" "" "./unit-collator" "229")
add_test(unit-collator.230 test-output "" "" "./unit-collator" "230")
add_test(unit-collator.231 test-output "" "" "./unit-collator" "231")
add_test(unit-collator.232 test-output "" "" "./unit-collator" "232")
add_test(unit-collator.233 test-output "" "" "./unit-collator" "233")
add_test(unit-collator.234 test-output "" "" "./unit-collator" "234")
add_test(unit-collator.235 test-output "" "" "./unit-collator" "235")

add_test(unit-protoparse.tcp_cksum unit-protoparse 0)

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 

file(MAKE_DIRECTORY ${LIBODB_BINARY_DIR}/test)
file(COPY test-output DESTINATION ${LIBODB_BINARY_DIR}/test/)
